# GNR-638-Assignment

./: CMakeLists.txt  README.md  backend.cpp  eval.py  train.py  train_test_split.py
