cmake_minimum_required(VERSION 3.10)
project(my_dl_framework)
add_compile_options(-O3)
add_compile_options(-O3 -march=native -ffast-math)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -ffast-math")
find_package(OpenCV REQUIRED)
find_package(pybind11 REQUIRED)
pybind11_add_module(my_dl_framework backend.cpp)
target_link_libraries(my_dl_framework PRIVATE ${OpenCV_LIBS})